Fixed the date table not spacing properly.

--- a/src/assets/stylesheets/index.css
+++ b/src/assets/stylesheets/index.css
@@ -1,5 +1,5 @@
 table {
-  border-collapse: separate;
+  border-collapse: separate !important;
   border-spacing: 25px 0;
 }
 
